# gentoo-scripts

./: .gitignore  .pylintrc  README  find_revdepless_virtuals.sh  gbugs.py  get-python-impls.py  gpyutils-check-for-stablereqs.sh  gpyutils-maints.sh  gpyutils-stablereqs-file.py  linux-commit-find  mozsec.py  msft-cve-fix-version.py  overlay_find_obsolete.py  pyproject.toml  secbug-file.py  secbug-wb.py  secbug-whiteboard.py  stablereq-file.py  stablereq-python-check.sh
ajakscripts/: bscve.py  gbugs.py  glsaalldone.py  secbugfile.py
