[project]
name = "ajak-scripts"
version = "0.1"
dependencies = [
    "python-bugzilla",
    "pkgcore",
]

[project.scripts]
bscve = "ajakscripts.bscve:main"
secbug-file = "ajakscripts.secbugfile:main"
glsa-all-done = "ajakscripts.glsaalldone:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
