[project]
name = "ajak-scripts"
version = "0.1"
dependencies = [
    "beautifulsoup4",
    "python-bugzilla",
    "pkgcore",
]

[project.scripts]
bscve = "ajakscripts.bscve:main"
secbug-file = "ajakscripts.secbugfile:main"
glsa-all-done = "ajakscripts.glsaalldone:main"
mozsec = "ajakscripts.mozsec:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
